Added function to select row, col, and square. And added highlight function on mouse over

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,9 @@
+.grid{
+}
+
 .cell{
+    position: relative;
+
     width: 50px;
     height: 50px;
     background-color: coral;
@@ -7,13 +12,17 @@
     vertical-align: middle;
     display: table-cell;
     cursor: pointer;
-
-    transition: background-color 0.1s ease-out;
+    z-index: 1;
+    transform: scale(1);
+    transition: all 0.05s ease-out;
 }
-.clicked{
-    background-color: cornflowerblue;
-    
 
+.clicked{
+    background-color: rgb(255, 90, 30);
+
+    transform: scale(1.2);
+    z-index: 10;
+    /* background-color: cornflowerblue; */
 
 }
 
@@ -33,3 +42,6 @@
     color: #777;
 }
 
+.highlighted{
+    background-color: rgb(155, 41, 0);
+}
