--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -14,11 +14,17 @@
         background-color: lightgreen;
     }
 }
+body, #root {
+    height: 100vh;
+    width: 100vw;
+    margin: 0;
+}
 
 .App {
     height: 100vh;
-    width: 100vh;
+    width: 100vw;
     margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .cell-inner:nth-child(n):nth-child(-n + 9) {
@@ -40,10 +46,19 @@
     border-bottom-width: 2px;
 }
 
+.grid-container{
+    height: 100%;
+    width: calc(100% - 250px);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+    
+
 .grid {
     display: grid;
-    grid-template-columns: repeat(9, 5vw);
-    grid-template-rows: repeat(9, 5vw);
+    grid-template-columns: repeat(9, 4vw);
+    grid-template-rows: repeat(9, 4vw);
     justify-content: center;
     align-content: center;
     grid-gap: 0rem;
@@ -69,6 +84,7 @@
 
     /* transform: scale(1.2); */
     z-index: 10;
+    text-decoration: underline dotted;
     /* background-color: cornflowerblue; */
 }
 
@@ -84,6 +100,7 @@
     font-size: 1.3em;
     font-weight: bolder;
     cursor: text;
+    text-decoration: underline;
 }
 
 .isSolved {
