Cleaned code and folders, need to correct step by step solver

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -62,6 +62,8 @@ body, #root {
     justify-content: center;
     align-content: center;
     grid-gap: 0rem;
+    width: min-content;
+    margin: auto;
 }
 
 .cell-inner {
