--- a/src/styles/SidePanel.scss
+++ b/src/styles/SidePanel.scss
@@ -14,6 +14,7 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
+    
         .button-container {
             border: 1px dashed #333;
             margin-top: 20px;
@@ -39,6 +40,10 @@
                 font-size: 0.9em;
                 line-height: 1em;
             }
+        }
+
+        .cell-info-container{
+            min-height: 200px;
         }
     }
 
