Updated highlight on mouse over

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -118,5 +118,5 @@ body, #root {
 }
 
 .highlighted {
-    /* background-color: rgb(155, 41, 0); */
+    background-color: rgba(189, 223, 255, 0.329);
 }
