--- a/src/styles/SidePanel.scss
+++ b/src/styles/SidePanel.scss
@@ -16,7 +16,7 @@
         justify-content: center;
     
         .button-container {
-            border: 1px dashed #333;
+            border: 2px dashed rgba(51, 51, 51, 0.69);
             margin-top: 20px;
             padding: 5px;
             
@@ -44,6 +44,15 @@
 
         .cell-info-container{
             min-height: 200px;
+        }
+
+        .fixed-bottom-right{
+            text-align: right;
+            
+            a{
+                color: #000;
+                padding-right: 25px;
+            }
         }
     }
 
